metaprogramming/antrl4/08-lexical_tricks/parsing XML/XMLParser.g4
parser grammar XMLParser;

options {
	tokenVocab = XMLLexer;
}

document: prolog? misc* element misc*;

prolog: XMLDeclOpen attribute* SPECIAL_CLOSE;

content:
	chardata? (
		(element | reference | CDATA | PI | COMMENT) chardata?
	)*;

element:
	'<' Name attribute* '>' content '<' '/' Name '>'
	| '<' Name attribute* '/>';

reference: EntityRef | CharRef;

attribute: Name '=' STRING; // Our STRING is AttValue in spec
/** ``All text that is not markup constitutes the character data of the document.''
 */
chardata: TEXT | SEA_WS;

misc: COMMENT | PI | SEA_WS;
